# beebole

./: .gitignore  LICENSE  README.md  pylama.ini  pyproject.toml
beebole/: __init__.py  base.py  client.py  exceptions.py  utils.py
beebole/interfaces/entities/: __init__.py  absence.py  company.py  custom_fields.py  jobs.py  person.py  time_entry.py
beebole/interfaces/responses/: __init__.py  absence.py  custom_field.py  group.py  jobs.py  simple.py
beebole/services/: __init__.py  absence.py  company.py  custom_field.py  group.py  person.py  project.py  subproject.py  task.py  time.py
scripts/: __init__.py  make_test_data.py  set_version.py
tests/: conftest.py  test_auth.py
tests/data/: payloads.json  responses.json
